kubernetes/backrest/backrest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backrest
  labels:
    app: backrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backrest
  template:
    metadata:
      labels:
        app: backrest
    spec:
      containers:
        - name: backrest
          image: garethgeorge/backrest:v1.7.3
          ports:
            - containerPort: 9898
          volumeMounts:
            - name: backrest-storage
              mountPath: /data
              subPath: data
            - name: backrest-storage
              mountPath: /config
              subPath: config
            - name: backrest-storage
              mountPath: /cache
              subPath: cache
            - name: backrest-storage
              mountPath: /tmp
              subPath: tmp
      volumes:
        - name: backrest-storage
          persistentVolumeClaim:
            claimName: backrest-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: backrest
spec:
  selector:
    app: backrest
  ports:
    - protocol: TCP
      name: api
      port: 80
      targetPort: 9898
