kubernetes/backrest/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backrest
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backrest.skippythesnake.com`)
      kind: Rule
      services:
        - name: backrest
          port: 80
